[package]
name = "butler"
version = "0.1.0"
authors = ["shawnharmsen <shawn@zksnarks.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.13", features = ["derive"] }
anyhow = "1.0"
rustyline = "14.0.0"
indicatif = "0.17.8"
futures-util = "0.3"
bytes = "1.6.0"
colored = "2.1.0"
config = "0.14.0"
log = "0.4.21"
env_logger = "0.11.5"
# Debug