[package]
name = "butler"
version = "0.1.0"
authors = ["shawnharmsen <shawn@zksnarks.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
dotenv = "0.15"
indicatif = "0.17"
log = "0.4"
reqwest = { version = "0.12.5", features = ["json"] }
rustyline = "14.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11.5"
# Debug